--- a/my-test-page/index.html
+++ b/my-test-page/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My test page</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <h1>Mozilla is cool</h1>
-    <img src="fire-fox.png" alt="Minha imagem de teste" />
+    <img src="imagens/fire-fox.png" alt="Minha imagem de teste" />
     <p>At Mozilla, we're a global community of</p>
     <ul>
         <li>technologits</li>
@@ -15,7 +21,11 @@
         <li>builders</li>
     </ul>
     <p>
-        Read the <a href="https://www.mozilla.org/pt-BR/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the persuit of our mission
+        Read the <a href="https://www.mozilla.org/pt-BR/about/manifesto/">Mozilla Manifesto</a> to learn even more about
+        the values and principles that guide the persuit of our mission
     </p>
+
+    <button>Alterar usuário</button>
 </body>
+<script src="main.js"></script>
 </html>
